Fix deprecates newInstance methods